ultimated home grafics on mobile, solved some issues

--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -32,5 +32,10 @@
         font-size: .7rem;
         position: relative;
         bottom: 1vh;
+
+        h1 {
+            font-size: 2rem;
+            padding: 0 3rem 0 1.5rem;
+        }
     }
 }
